--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,81 @@
+# title: Vaibhav Goel
+# description: Welcome to my portfolio
+# show_downloads: true
+# theme: jekyll-theme-cayman
+# Site settings
 title: Vaibhav Goel
-description: Welcome to my portfolio
-show_downloads: true
+email: your.email@example.com
+description: >- 
+  Data Analyst transitioning to Data Science, with expertise in 
+  statistical analysis, machine learning, and data visualization. 
+  Passionate about deriving meaningful insights from complex datasets.
+baseurl: ""
+url: "https://a330w.github.io"
+
+# Theme and display settings
 theme: jekyll-theme-cayman
+show_downloads: true
+google_analytics: # your Google Analytics tracking ID
+
+# Professional profiles
+social_links:
+  linkedin: your-linkedin-username
+  github: a330w
+  kaggle: your-kaggle-username
+  medium: your-medium-username # if you write data science articles
+
+# Skills categories
+skills:
+  data_analysis:
+    - Python (Pandas, NumPy)
+    - SQL
+    - Excel/Google Sheets
+    - Statistical Analysis
+  data_science:
+    - Machine Learning (Scikit-learn)
+    - Data Visualization (Matplotlib, Seaborn)
+    - Deep Learning Basics
+    - Feature Engineering
+  tools:
+    - Tableau
+    - Power BI
+    - Jupyter Notebooks
+    - Git
+
+# Portfolio sections
+sections:
+  - title: Data Analysis Projects
+    description: Showcasing expertise in data cleaning, visualization, and insights
+  - title: Machine Learning Projects
+    description: Implementation of various ML algorithms and models
+  - title: Dashboards & Visualizations
+    description: Interactive data visualization projects
+  - title: Certifications
+    description: Professional certifications and courses
+
+# Footer
+footer:
+  show_social_links: true
+  copyright_text: © 2025 Vaibhav Goel. All rights reserved.
+
+# Build settings
+markdown: kramdown
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
+# SEO tags
+keywords: >-
+  data analyst, data scientist, machine learning, 
+  data visualization, statistical analysis, 
+  python, SQL, tableau, power BI
+
+# Exclude development files
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor
+  - .git
+  - README.md
