--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@ title: Portfolio
 # url: "https://a330w.github.io"
 
 # Theme and display settings
-theme: jekyll-theme-cayman
-show_downloads: false
+# theme: jekyll-theme-cayman
+remote_theme: lorepirri/cayman-blog
+show_downloads: true
 google_analytics: # your Google Analytics tracking ID
 
 # Professional profiles
