--- a/_config.yml
+++ b/_config.yml
@@ -18,41 +18,41 @@ remote_theme: lorepirri/cayman-blog
 show_downloads: true
 google_analytics: # your Google Analytics tracking ID
 
-# Professional profiles
-social_links:
-  linkedin: your-linkedin-username
-  github: a330w
-  kaggle: your-kaggle-username
-  medium: your-medium-username # if you write data science articles
+# # Professional profiles
+# social_links:
+#   linkedin: your-linkedin-username
+#   github: a330w
+#   kaggle: your-kaggle-username
+#   medium: your-medium-username # if you write data science articles
 
-# Skills categories
-skills:
-  data_analysis:
-    - Python (Pandas, NumPy)
-    - SQL
-    - Excel/Google Sheets
-    - Statistical Analysis
-  data_science:
-    - Machine Learning (Scikit-learn)
-    - Data Visualization (Matplotlib, Seaborn)
-    - Deep Learning Basics
-    - Feature Engineering
-  tools:
-    - Tableau
-    - Power BI
-    - Jupyter Notebooks
-    - Git
+# # Skills categories
+# skills:
+#   data_analysis:
+#     - Python (Pandas, NumPy)
+#     - SQL
+#     - Excel/Google Sheets
+#     - Statistical Analysis
+#   data_science:
+#     - Machine Learning (Scikit-learn)
+#     - Data Visualization (Matplotlib, Seaborn)
+#     - Deep Learning Basics
+#     - Feature Engineering
+#   tools:
+#     - Tableau
+#     - Power BI
+#     - Jupyter Notebooks
+#     - Git
 
-# Portfolio sections
-sections:
-  - title: Data Analysis Projects
-    description: Showcasing expertise in data cleaning, visualization, and insights
-  - title: Machine Learning Projects
-    description: Implementation of various ML algorithms and models
-  - title: Dashboards & Visualizations
-    description: Interactive data visualization projects
-  - title: Certifications
-    description: Professional certifications and courses
+# # Portfolio sections
+# sections:
+#   - title: Data Analysis Projects
+#     description: Showcasing expertise in data cleaning, visualization, and insights
+#   - title: Machine Learning Projects
+#     description: Implementation of various ML algorithms and models
+#   - title: Dashboards & Visualizations
+#     description: Interactive data visualization projects
+#   - title: Certifications
+#     description: Professional certifications and courses
     
 # Navigation
 navigation:
