--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@ remote_theme: lorepirri/cayman-blog
 show_downloads: true
     
 # Navigation
-navigation:
-  - title: "Home"
-    url: /
-  - title: "About"
-    url: /about/
-  - title: "Projects"
-    url: /projects/
-  - title: "Blog"
-    url: /blog/
-  - title: "Contact"
-    url: /contact/
+# navigation:
+#   - title: "Home"
+#     url: /
+#   - title: "About"
+#     url: /about/
+#   - title: "Projects"
+#     url: /projects/
+#   - title: "Blog"
+#     url: /blog/
+#   - title: "Contact"
+#     url: /contact/
     
