--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,30 @@
 title: Portfolio
-remote_theme: lorepirri/cayman-blog
+description: Hi! I am Vaibhav Goel!
 show_downloads: true
-    
-# Navigation
-navigation:
-  - title: "Home"
-    url: /
-  - title: "About"
-    url: /about/
-  - title: "Projects"
-    url: /projects/
-  - title: "Blog"
-    url: /blog/
-  - title: "Contact"
-    url: /contact/
+
+baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+url: "https://a330w.github.io" # change this to the base hostname & protocol for your site
+
+
+google_analytics:
+
+# cayman-blog date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+cayman-blog:
+  date_format: "%b %-d, %Y"
+
+theme: # leave it empty
+
+# social
+author: a330w
+image: 
+twitter:
+  username: 
 
 plugins:
-  - jekyll-remote-theme
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-sitemap
+  - jekyll-target-blank
 
+target-blank:
+    rel: nofollow
+
+header_page_refs: ['home', 'about', 'projects', 'blog', 'contact']
