--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ google_analytics:
 cayman-blog:
   date_format: "%b %-d, %Y"
 
-theme: # leave it empty
+remote_theme: lorepirri/cayman-blog
 
 # social
 author: a330w
