--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,19 @@ show_downloads: true
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
 url: "https://a330w.github.io" # change this to the base hostname & protocol for your site
 
+navigation:
+  - title: "Home"
+    url: /
+  - title: "About"
+    url: /about/
+  - title: "Projects"
+    url: /projects/
+  - title: "Blog"
+    url: /blog/
+  - title: "Contact"
+    url: /contact/
 
-google_analytics:
+# google_analytics:
 
 # cayman-blog date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -27,4 +38,4 @@ plugins:
 target-blank:
     rel: nofollow
 
-header_page_refs: ['home', 'about', 'projects', 'blog', 'contact']
+# header_page_refs: ['home', 'about', 'projects', 'blog', 'contact']
