--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,10 @@
 title: Portfolio
 description: Hi! I am Vaibhav Goel!
-show_downloads: true
+show_downloads: false
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
 url: "https://a330w.github.io" # change this to the base hostname & protocol for your site
 
-# navigation:
-  # - title: "Home"
-  #   url: /
-  # - title: "About"
-  # #   url: /about/
-  # - title: "Projects"
-  #   url: /projects/
-  # - title: "Blog"
-  #   url: /blog/
-  # - title: "Contact"
-  #   url: /contact/
-
-# google_analytics:
-
-# cayman-blog date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 cayman-blog:
   date_format: "%b %-d, %Y"
 
