--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ url: "https://a330w.github.io" # change this to the base hostname & protocol for
 cayman-blog:
   date_format: "%b %-d, %Y"
 
-remote_theme: lorepirri/cayman-blog
+remote_theme: 
+# lorepirri/cayman-blog
 
 # social
 author: a330w
