--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,13 @@ title: Portfolio
 description: Hi! I am Vaibhav Goel!
 show_downloads: false
 
-baseurl: "a330w.github.io" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
+baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
 url: "https://a330w.github.io" # change this to the base hostname & protocol for your site
 
 cayman-blog:
   date_format: "%b %-d, %Y"
 
-remote_theme: 
-# lorepirri/cayman-blog
+remote_theme: lorepirri/cayman-blog
 
 # social
 author: a330w
