--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Portfolio"
-# description: ""
+title: "Vaibhav Goel"
+description: "Welcome to my portfolio — a curated collection of passion projects crafted during my free time."
 show_downloads: false
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
